fixed controllers, routes, validation, and swagger for students
